# ArcRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sences.hpp  setup.sh
arc/: arc.hpp  bxdf.hpp  camera.hpp  geo.hpp  geometry.hpp  graph.hpp  image.hpp  material.hpp  object.hpp  objsence.hpp  obuffer.hpp  photon.hpp  render.hpp  sampler.hpp  sence.hpp  shape.hpp  spectrum.hpp  surface.hpp  utils.hpp
include/: arc.hpp  bxdf.hpp  camera.hpp  counter.hpp  geometry.hpp  graph.hpp  image.hpp  light.hpp  mapping.hpp  material.hpp  medium.hpp  model.hpp  object.hpp  objloader.hpp  obuffer.hpp  particle.hpp  photon.hpp  render.hpp  revSurface.hpp  sampler.hpp  scene.hpp  sence.hpp  shape.hpp  spectrum.hpp  surface.hpp  texture.hpp  tracer.hpp  tree.hpp  utils.hpp  vecmath.hpp
include/bxdfs/: biggx.hpp  ggx.hpp  lambert.hpp  mtl.hpp  mtlExt.hpp
include/cameras/: actinometer.hpp  perspective.hpp  simulated.hpp
include/lights/: spot.hpp  uniform.hpp
include/mediums/: scatter.hpp  transparent.hpp
include/renders/: bdpt.hpp  lspt.hpp  npt.hpp
include/shapes/: conical.hpp  cylinder.hpp  disc.hpp  flat.hpp  revSurface.hpp  revolved.hpp  sphere.hpp  triangle.hpp
include/tracers/: bdpt.hpp  sppm.hpp
include/vecmath/: box3.hpp  curve.hpp  mat3.hpp  matrix.hpp  poly.hpp  ray.hpp  spline.hpp  trans3.hpp  utils.hpp  vec2.hpp  vec3.hpp
models/: Rose_Model_3_decimated.mtl  classroom.mtl  default.mtl  glass_0.mtl  rose.mtl
results/: HelloWorldD5000.ppm  HelloWorldN5000.ppm  rose10000.ppm  sence3-20000.ppm  teapotD-500.ppm  teapotT-2500.ppm
results/BxDF/: 016|00|02.ppm  016|00|06.ppm  016|00|10.ppm  016|05|02.ppm  016|05|06.ppm  016|05|10.ppm  016|10|02.ppm  016|10|06.ppm  016|10|10.ppm  300|00|02.ppm  300|00|06.ppm  300|00|10.ppm
samples/: CMakeLists.txt  HelloWorld.cpp  Rose.cpp  caustics.cpp  classroom.cpp  corner.cpp  model.cpp  scene10.cpp  scene11.cpp  scene5.cpp  scene6.cpp  scene7.cpp  scene8.cpp  scene9.cpp  surface.cpp  texture.cpp
samples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
samples/caustics/: CMakeLists.txt  caustics.cpp
samples/classroom/: CMakeLists.txt  classroom.cpp
samples/corner/: CMakeLists.txt  corner.cpp
samples/fireplace/: CMakeLists.txt  fireplace.cpp
samples/rose/: CMakeLists.txt  Rose_Model_3_decimated.mtl  rose.cpp
samples/scene10/: CMakeLists.txt  scene10.cpp
samples/scene11/: CMakeLists.txt  default.mtl  scene11.cpp
samples/scene5/: CMakeLists.txt  scene5.cpp
samples/scene6/: CMakeLists.txt  scene6.cpp
samples/scene7/: CMakeLists.txt  default.mtl  scene7.cpp
samples/scene8/: CMakeLists.txt  scene8.cpp
samples/scene9/: CMakeLists.txt  scene9.cpp
samples/surface/: CMakeLists.txt  surface.cpp
samples/texture/: CMakeLists.txt  texture.cpp
src/: arc.cpp  arc.hpp  bxdf.hpp  camera.hpp  geometry.hpp  graph.hpp  mapping.hpp  material.hpp  object.hpp  objloader.hpp  objsence.hpp  obuffer.hpp  photon.hpp  render.hpp  sampler.hpp  sence.hpp  shape.hpp  spectrum.hpp  surface.hpp  utils.hpp
tests/: Fresnel.cpp
tests/surface_test/: main.cpp
